# airflowHPC

./: MANIFEST.in  README.bridges2  README.md  backup_radical.py  pyproject.toml  requirements.txt  swaps.py
.github/workflows/: ci.yml
airflowHPC/: __init__.py  policies.py
airflowHPC/cli/commands/: radical_command.py
airflowHPC/dags/: ala_dipeptide.py  analysis.py  anthracene.py  anthracene_complex.py  anthracene_simple.py  convert_mdp.py  equilibrate.py  ext_top.py  fs_peptide.py  gmx.py  gmx_complex.py  gmx_mpi.py  gmx_multi.py  gmx_trigger.py  gmxapi_multi.py  gromacs_remd_tutorial.py  grompp_mdrun.py  log_source.py  loop.py  minimize.py  npt_equil.py  nvt_equil.py  prepare_system.py  pull.py  rct_gmx.py  rct_gmx_multi.py  rct_gmx_trigger.py  rct_grompp_mdrun.py  rct_multi.py  replex.py  replex_multidir.py  resource.py  resource_multi.py  rexee_continue.py  rexee_init.py  rexee_run.py  setup_single.py  simulate.py  simulate_expand.py  simulate_expand_uniform.py  (+12 more)
airflowHPC/dags/rct/: rct_analysis.py  rct_gmx.py  rct_gmx_complex.py  rct_gmx_multi.py  rct_gmx_trigger.py  rct_gromacs_remd_tutorial.py  rct_grompp_mdrun.py  rct_log_source.py  rct_prepare_system.py  rct_replex.py  rct_replex_multidir.py  rct_resource.py  rct_resource_multi.py  rct_rexee_continue.py  rct_rexee_init.py  rct_rexee_run.py  rct_setup_single.py  rct_test_mpi4py.py  (+5 more)
airflowHPC/data/: __init__.py
airflowHPC/executors/: fake_executor.py  mpi_executor.py  radical_executor.py  radical_local_executor.py  resource_executor.py  resource_local_executor.py  test_executor.py  zmq_local_executor.py  zmq_sequential_executor.py
airflowHPC/hooks/: gpu.py  resource.py  slurm.py  subprocess.py
airflowHPC/operators/: __init__.py  bash.py  external_output_task.py  mpi_bash_operator.py  mpi_external_python_operator.py  mpi_gmx_bash_operator.py  radical_bash_operator.py  radical_external_python_operator.py  radical_gmx_operator.py  radical_gmxapi_bash_operator.py  radical_gmxapi_operator.py  radical_operator.py  resource_bash_operator.py  resource_gmx_operator.py  resource_rct_operator.py
airflowHPC/utils/: loud_logger.py  mdp2json.py  mdp_schema.json  serialization.py  task_logger.py
scripts/: airflow.sql  base_runner.py  cleanup.py  node_setup.sh  plot_rama.py  postgres_setup.sh  prepare_scheduler.sh  prepare_standalone.sh  spack_setup.sh
tests/: conftest.py  pytest.ini  replex.py  test_replex.py
tests/data/: mock_dhdl_store.json
tests/hooks/: pytest.ini  resource.py  slurm.py  test_resource.py  test_slurm.py
(+29 files in other folders)
