[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-provider-radical"
dynamic = ["version"]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]

dependencies = [
    "apache-airflow",
    "gmxapi",
]

[project.urls]
"Source" = "https://github.com/ejjordan/airflowHPC"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "build",
    "packaging",
]

target-version = ['py39', 'py310', 'py311']

[project.entry-points.apache_airflow_provider]
provider_info = "airflowHPC.__init__:get_provider_info"

