[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-providers-hpc"
dynamic = ["version"]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]

dependencies = [
    "apache-airflow>=2.6",
    "radical.pilot",
    "numpy",
    "scikit-learn",
    "MDAnalysis"
]
[project.optional-dependencies]
mysql = [
    "apache-airflow[mysql]"
]
postgres = [
    "apache-airflow[postgres]",
    "psycopg2-binary"
]
testing = [
    "pytest",
    "pytest-env"
]

[project.urls]
"Source" = "https://github.com/ejjordan/airflowHPC"

[project.readme]
file = "README.md"
content-type = "text/markdown"

target-version = ['py39', 'py310', 'py311']

[project.entry-points.apache_airflow_provider]
provider_info = "airflowHPC.__init__:get_provider_info"

[project.entry-points.'airflow.policy']
_ = 'airflowHPC.policies'
